<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="24dp"
    tools:context=".ui.detail.PokemonDetailActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/tv_pokemon_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_pokemon_detail"
        app:tint="@color/dark_accent" />

    <TextView
        android:id="@+id/tv_pokemon_detail"
        style="@style/SemiBold18Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/pokemon_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_pokemon_image"
        android:layout_width="180dp"
        android:layout_height="240dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/pokemon_card"
        android:src="@drawable/dummy_pokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <TextView
        android:id="@+id/tv_error_state"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/error_state_image"
        android:textColor="@color/red_accent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/iv_pokemon_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_pokemon_image" />

    <TextView
        android:id="@+id/tv_name_label"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_pokemon_image" />

    <TextView
        android:id="@+id/tv_pokemon_name"
        style="@style/Regular12Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_label"
        tools:text="Absol G" />

    <TextView
        android:id="@+id/tv_type_label"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_name" />

    <TextView
        android:id="@+id/tv_pokemon_type"
        style="@style/Regular12Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_type_label"
        tools:text="Darkness" />

    <TextView
        android:id="@+id/tv_level_label"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_type" />

    <TextView
        android:id="@+id/tv_pokemon_level"
        style="@style/Regular12Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_level_label"
        tools:text="100" />

    <TextView
        android:id="@+id/tv_health_label"
        style="@style/Medium14Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/health_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_level" />

    <TextView
        android:id="@+id/tv_pokemon_health"
        style="@style/Regular12Sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_health_label"
        tools:text="80" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_accent"
        android:contentDescription="@string/download"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:src="@drawable/ic_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/light_primary" />

</androidx.constraintlayout.widget.ConstraintLayout>