<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.searchbar.PokemonSearchbarActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/SemiBold24Sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_search"
            style="@style/Regular14Sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_radius_8dp"
            android:hint="@string/search_here"
            android:inputType="text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toStartOf="@id/btn_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/bg_radius_8dp"
            android:backgroundTint="@color/green_accent"
            android:contentDescription="@string/search"
            android:paddingHorizontal="12dp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/et_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_search"
            app:tint="@color/light_primary" />

        <TextView
            android:id="@+id/tv_error_state"
            style="@style/Medium14Sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/error_state_message"
            android:textColor="@color/red_accent"
            app:layout_constraintEnd_toEndOf="@id/btn_search"
            app:layout_constraintStart_toStartOf="@id/et_search"
            app:layout_constraintTop_toBottomOf="@id/et_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pokemon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="-24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="-24dp"
            android:layout_marginBottom="-24dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/item_pokemon_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>